# RustOS

./: .gitignore  Cargo.toml  LICENSE  README  x86_64-barebones.json
.cargo/: config  config.toml
boot/: Cargo.toml  run
boot/.cargo/: config.toml
boot/src/: main.rs
src/: allocator.rs  debug.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  scheduler.rs  simple_executor.rs  thread.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs  threads.rs
