[package]
name = "os"
version = "0.1.0"
authors = ["OleStrohm <strohm99@gmail.com>"]
edition = "2021"

[dependencies]
bootloader = "0.10.12"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.10.1"
backtrace = { version = "0.3", default-features = false }
owo-colors = "3.4.0"
font8x8 = { version = "0.3.1", default-features = false }

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0x0000_4000_0000_0000"
kernel-stack-address = "0x_007F_8000_0000"
kernel-stack-size = "0x1_4000"
boot-info-address = "0x_7555_AAAE_0000"
framebuffer-address = "0x_7F55_AAAA_0000"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.6"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.21"
default-features = false
features = ["alloc"]

#[package.metadata.bootimage]
#run-args = [
#	"-serial", "mon:stdio", "-d", "int", "-D", "qemu_debug.log", "-no-reboot"
#]
#test-args = [
#	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
#	"-serial", "stdio",
#	"-display", "none"
#]
#test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
